part1/Exercise_1.11_Persisting_data/Log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logimages
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
